2004-09-18  Roland Illig  <roland.illig@gmx.de>

	* smbfs.c (smbfs_init): Added a cast to avoid compiler warning.

2004-09-17  Pavel S. Shirshov  <pavelsh@mail.ru>

	* extfs.c (extfs_open_archive): Fixes bug in extfs, which showed
	'Inconsistent extfs archive' on small archives and diffs. 
	QNX 6.x (QNX Neutrino) specific 

	Based on patch from Dmitry Alexeyev <dmi_a@qnx.org.ru>

2004-09-06  Jakub Jelinek  <jakub@redhat.com>

        * fish.c (fish_file_store): Call got_interrupt() instead of testing
        whether got_interrupt is non-NULL (it always is).

2004-09-04  Pavel S. Shirshov  <pavelsh@mail.ru>

	* vfs.c (vfs_cmp_handle): Fix warnings on 64-bit platforms.
	(vfs_op): Likewise.
	(vfs_info): Likewise.
	(vfs_free_handle): Likewise.
	* extfs/rpm (mcrpmfs_run): Quote parameters to calls
	to system/open that spawn a shell.
	* direntry.c (vfs_s_find_entry_tree): Make "size" size_t.

	Based on patches from Jakub Jelinek  <jakub@redhat.com>

2004-09-02  Andrew V. Samoilov  <sav@bcs.zp.ua>

        * tar.c (tar_read_header): Fix missed *.
        * extfs.c (extfs_readlink): Revert last change: readlink() does not
        append a NUL character to buf.
	* mcfs.c (mcfs_readlink): Likewise.
	* direntry.c (vfs_s_readlink): Likewise.
        * ftpfs.c: Warning fix.
        * vfs-impl.h (struct vfs_class.readlink): Make "size" size_t.
        Adjust all callers.
	* local.c (local_readlink): Make "size" size_t.
	* sfs.c (sfs_readlink): Reformat function.
	* smbfs.c (smbfs_readlink): Reformat function.

2004-09-02  Roland Illig  <roland.illig@gmx.de>

	* mcfs.c (mcfs_readlink): Fixed syntax error (usage of
	undeclared variable). Simplified string copying.

2004-09-02  Pavel S. Shirshov  <pavelsh@mail.ru>

	* extfs/uzip.in (mczipfs_list): Add support for negative 
	compression ratio in archive listing.

2004-09-02  Pavel S. Shirshov  <pavelsh@mail.ru>

	* direntry.c (vfs_s_readlink): Use g_strlcpy() instead of strncpy().